# cpu_scheduling_paging

./: CMakeLists.txt  README.md
headers/: CPU_Process.h  PROCESS_GENERATOR.h  fcfs.h  lfu.h  mfu.h  sjf.h  split.h
src/: fcfs.cpp  lfu.cpp  main.cpp  mfu.cpp  sjf.cpp
